--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,15 @@ html header .navbar .navbar-brand .brand-logo {
     width: 50%;
   }
 }
+html header .navbar .navbar-toggler {
+  z-index: 2;
+}
 html header .navbar .navbar-toggler .navbar-toggler-icon {
   width: 1.3rem;
   height: 1.3rem;
 }
 html header .navbar .navbar-nav .nav-item.active .nav-link {
-  color: #0A1E2D;
+  color: #0091FF;
 }
 html header .navbar .navbar-nav .nav-item .nav-link {
   color: #ffffff;
@@ -50,7 +53,7 @@ html header .navbar .navbar-nav .nav-item .nav-link {
   font-size: 1rem;
 }
 html header .navbar .navbar-nav .nav-item .nav-link:hover {
-  color: #0A1E2D;
+  color: #0091FF;
 }
 html header .navbar .navbar-nav .nav-item .nav-link.login {
   color: #0A1E2D;
