--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,6 +38,7 @@ html {
       }
 
       .navbar-toggler {
+        z-index: 2;
         .navbar-toggler-icon {
           width: 1.3rem;
           height: 1.3rem;
@@ -48,7 +49,7 @@ html {
         .nav-item {
           &.active {
             .nav-link {
-              color: $main-color;
+              color: $primary-color;
             }
           }
 
@@ -58,7 +59,7 @@ html {
             font-size: 1rem;
 
             &:hover {
-              color: $main-color;
+              color: $primary-color;
             }
 
             &.login {
