--- a/assets/css/mobile-menu.css
+++ b/assets/css/mobile-menu.css
@@ -1,71 +1,198 @@
-@media (max-width: 990px) {
-  .navbar-collapse {
-    transition: all 0.375s;
-    visibility: hidden;
-    opacity: 0;
-    z-index: -1;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background: transparent;
-    height: 100vh;
-  }
-  .navbar-collapse.is-open {
-    opacity: 1;
-    z-index: 1;
-    visibility: visible;
-  }
-  .navbar-collapse.is-open::before {
-    transform: skew(-20deg) translateX(0);
-  }
-  .navbar-collapse.is-open .navbar-nav .nav-item .nav-link {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  .navbar-collapse.is-open .navbar-nav .nav-item:nth-child(1) .nav-link {
-    transition: all 275ms 175ms;
-  }
-  .navbar-collapse.is-open .navbar-nav .nav-item:nth-child(2) .nav-link {
-    transition: all 275ms 225ms;
-  }
-  .navbar-collapse.is-open .navbar-nav .nav-item:nth-child(2) .nav-link {
-    transition: all 275ms 275ms;
-  }
-  .navbar-collapse::before {
-    height: 100vh;
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 145, 255, 0.9);
-    transform-origin: 0 0;
-    transform: skew(-14deg) translateX(-120%);
-    transition: all 0.275s 0.1s;
-  }
-  .navbar-collapse .navbar-nav {
-    display: inline-flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: flex-end;
-    justify-content: center;
-    transform: translateX(-18%) skew(-16deg);
-  }
-  .navbar-collapse .navbar-nav .nav-item {
-    display: block;
-    margin: 0.5rem 0;
-    text-align: right;
-    transform: skew(16deg);
-  }
-  .navbar-collapse .navbar-nav .nav-item .nav-link {
-    opacity: 0;
-    transform: translateY(-10px);
-    font-size: 1.5rem !important;
-  }
+/* Main menu positionning */
+#burger {
+  z-index: 1000;
+}
+
+.main-nav {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  background: transparent;
+  opacity: 0;
+  z-index: -1;
+  visibility: hidden;
+  transition: all 1.5s;
+  height: 100vh;
+}
+
+.main-nav.is-open {
+  opacity: 1;
+  z-index: 100;
+  visibility: visible;
+}
+
+/* Yellow band effect */
+.main-nav::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: -15px;
+  background: #FEDC2A;
+  transform-origin: 0 0;
+  transform: skew(-14deg) translateX(-120%);
+  transition: all 1.5s 0.1s;
+}
+
+.main-nav.is-open::before {
+  transform: skew(-14deg) translateX(0);
+}
+
+/* Skewing effect on menu links */
+.main-nav ul {
+  display: inline-flex;
+  flex-direction: column;
+  height: 93%;
+  /* Should be 100%, but we have a notice message :D */
+  align-items: flex-end;
+  justify-content: center;
+  transform: translateX(-18%) skew(-16deg);
+}
+
+.main-nav li {
+  display: block;
+  margin: 0.5rem 0;
+  text-align: right;
+  transform: skew(16deg);
+}
+
+/* Apparition effect on links */
+.main-nav a {
+  opacity: 0;
+  transform: translateY(-10px);
+}
+
+.main-nav.is-open a {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.main-nav li:nth-child(1) a {
+  transition: all 675ms 475ms;
+}
+
+.main-nav li:nth-child(2) a {
+  transition: all 675ms 525ms;
+}
+
+.main-nav li:nth-child(3) a {
+  transition: all 675ms 675ms;
+}
+
+/* Decoration */
+.main-nav ul,
+.main-nav li {
+  list-style: none;
+  padding: 0;
+}
+
+.main-nav a {
+  display: block;
+  padding: 12px 0;
+  color: #5A3B5D;
+  font-size: 1.4em;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+/* Burger Style: @see: https://codepen.io/CreativeJuiz/full/oMZNXy */
+.open-main-nav {
+  position: absolute;
+  top: 15px;
+  padding-top: 20px;
+  right: 15px;
+  z-index: 1000;
+  background: none;
+  border: 0;
+  cursor: pointer;
+}
+
+.open-main-nav:focus {
+  outline: none;
+}
+
+.burger {
+  position: relative;
+  display: block;
+  width: 28px;
+  height: 4px;
+  margin: 0 auto;
+  background: #5A3B5D;
+  transform: skew(5deg);
+  transition: all 0.275s;
+}
+
+.burger:after,
+.burger:before {
+  content: "";
+  display: block;
+  height: 100%;
+  background: #5A3B5D;
+  transition: all 0.275s;
+}
+
+.burger:after {
+  transform: translateY(-12px) translateX(-2px) skew(-20deg);
+}
+
+.burger:before {
+  transform: translateY(-16px) skew(-10deg);
+}
+
+/* Toggle State part */
+.is-open .burger {
+  transform: skew(5deg) translateY(-8px) rotate(-45deg);
+}
+
+.is-open .burger:before {
+  transform: translateY(0px) skew(-10deg) rotate(75deg);
+}
+
+.is-open .burger:after {
+  transform: translateY(-12px) translateX(10px) skew(-20deg);
+  opacity: 0;
+}
+
+/* MENU Text part */
+.burger-text {
+  display: block;
+  font-size: 0.675rem;
+  letter-spacing: 0.05em;
+  margin-top: 0.5em;
+  text-transform: uppercase;
+  font-weight: 500;
+  text-align: center;
+  color: #5A3B5D;
+}
+
+/* Notice */
+.notice {
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  background: #F2F2F2;
+  color: #5A3B5D;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  z-index: 100;
+  text-align: center;
+}
+
+.notice strong {
+  font-weight: 700;
+}
+
+.notice a {
+  padding: 2px 3px;
+  background: #FEDC2A;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=mobile-menu.css.map */
