--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,5 +1,3 @@
-
-
 @font-face {
 	font-family: 'HelveticaNeueCyr';
 	src: url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Medium.eot');
@@ -9,6 +7,7 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Medium.ttf') format('truetype');
 	font-weight: 500;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -20,6 +19,7 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Heavy.ttf') format('truetype');
 	font-weight: 900;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -31,6 +31,7 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-HeavyItalic.ttf') format('truetype');
 	font-weight: 900;
 	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
@@ -42,62 +43,9 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.ttf') format('truetype');
 	font-weight: 900;
 	font-style: normal;
+	font-display: swap;
 }
 
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLightItalic.eot');
-	src: local('HelveticaNeueCyr-UltraLightItalic'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLightItalic.eot?#iefix') format('embedded-opentype'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLightItalic.woff') format('woff'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLightItalic.ttf') format('truetype');
-	font-weight: 200;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-BlackItalic.eot');
-	src: local('HelveticaNeueCyr-BlackItalic'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-BlackItalic.eot?#iefix') format('embedded-opentype'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-BlackItalic.woff') format('woff'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-BlackItalic.ttf') format('truetype');
-	font-weight: 900;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-ThinItalic.eot');
-	src: local('HelveticaNeueCyr-ThinItalic'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-ThinItalic.eot?#iefix') format('embedded-opentype'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-ThinItalic.woff') format('woff'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-ThinItalic.ttf') format('truetype');
-	font-weight: 100;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-MediumItalic.eot');
-	src: local('HelveticaNeueCyr-MediumItalic'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-MediumItalic.eot?#iefix') format('embedded-opentype'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-MediumItalic.woff') format('woff'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-MediumItalic.ttf') format('truetype');
-	font-weight: 500;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-LightItalic.eot');
-	src: local('HelveticaNeueCyr-LightItalic'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-LightItalic.eot?#iefix') format('embedded-opentype'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-LightItalic.woff') format('woff'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-LightItalic.ttf') format('truetype');
-	font-weight: 300;
-	font-style: italic;
-}
 
 @font-face {
 	font-family: 'HelveticaNeueCyr';
@@ -108,28 +56,7 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.ttf') format('truetype');
 	font-weight: 200;
 	font-style: normal;
-}
-
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-BoldItalic.eot');
-	src: local('HelveticaNeueCyr-BoldItalic'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-BoldItalic.eot?#iefix') format('embedded-opentype'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-BoldItalic.woff') format('woff'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-BoldItalic.ttf') format('truetype');
-	font-weight: bold;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Italic.eot');
-	src: local('HelveticaNeueCyr-Italic'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Italic.eot?#iefix') format('embedded-opentype'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Italic.woff') format('woff'),
-		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Italic.ttf') format('truetype');
-	font-weight: 500;
-	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
@@ -141,6 +68,7 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Roman.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -152,6 +80,7 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Bold.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -163,6 +92,7 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.ttf') format('truetype');
 	font-weight: 300;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -174,4 +104,5 @@
 		url('../../assets/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Thin.ttf') format('truetype');
 	font-weight: 100;
 	font-style: normal;
+	font-display: swap;
 }
